Connect operational workflow data lineage
